--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,13 @@
 /* Add a black background color to the top navigation */
-.topnav {
+#navbar {
     background-color: #FFF;
     overflow: hidden;
   }
   
   /* Style the links inside the navigation bar */
-  .topnav a {
+  #navbar a {
     float: right;
+    display: block;
     color: #EFE0D9;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -22,18 +23,20 @@
   }
   
   /* Change the color of links on hover */
-  .topnav a:hover {
+  #navbar a:hover {
     background-color: #EFE0D9;
     color: white;
   }
   
   /* Add a color to the active/current link */
-  .topnav a.active {
+  #navbar a.active {
     background-color: #EFE0D9;
     color: white;
   }
 
   img { 
     max-width: 100%; 
-    margin: 0px;
+    display: block;
   }
+
+  
